--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "homepage": "http://bluefire2.github.io/plotter",
   "dependencies": {
+    "d3": "^4.12.2",
+    "mathjs": "^3.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-faux-dom": "^4.1.0",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +20,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
