--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://bluefire2.github.io/plotter",
   "dependencies": {
     "d3": "^4.12.2",
+    "lodash": "^4.17.4",
     "mathjs": "^3.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
