--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plotter",
-  "version": "2.1.2",
+  "version": "2.2.0",
   "private": true,
   "homepage": "http://bluefire2.github.io/plotter",
   "dependencies": {
@@ -12,7 +12,8 @@
     "react-faux-dom": "^4.1.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
